2002-01-14  Alexander V. Lukyanov <lav@yars.free.net>

	* Resolver.cc: fixed coredump on unknown service.

2001-01-03  jfaith <jfaith@cemsys.com>

	* resource.cc: (OrderValidate) fix off by one xmalloc bug.

2001-12-25  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: assume keep-alive for http/1.1 by default (reported by
	  Marc Lehmann).

2001-12-14  Albert Chin-A-Young <lftp-devel@thewrittenword.com>

	* FtpDirList.h: compilation fix.

2001-12-03  Glenn Maynard <g_ld@zewt.org>

	* FileSetOutput.cc: don't add type suffix if type is not defined.
	* ftpclass.cc: lower disconnection message debug level if session
	  is closed.

2001-12-03  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: sync with head branch.

2001-11-22  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: fix - rmdir/rm were interchanged.

2001-11-21  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: don't assume peer!=0, copy control socket
	  name to member peer_sa.
	* NetAccess.cc: remove obsolete commented out asserts.
	* Fish.cc: set user, group, nlinks and mode in FileInfo class.

2001-11-19  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.cc: don't set LC_NUMERIC. It breaks default float settings
	  on certain locales.
	* FileSetOutput.h: make it compile on irix.

2001-11-13  Glenn Maynard <g_ld@zewt.org>

	* ColumnOutput.cc: (addf) fix memory leak.

2001-11-12  Alexander V. Lukyanov <lav@yars.free.net>

	* resource.cc: remove NoClosure from net:connection-limit. Reported
	  by Piotr Krukowiecki <piotr@pingu.ii.uj.edu.pl>.

2001-11-09  Alexander V. Lukyanov <lav@yars.free.net>

	* ResMgr.cc, ResMgr.h, StatusLine.cc, TimeDate.cc, TimeDate.h,
	  Timer.cc, Timer.h, complete.cc: make TimeInterval subclass of
	  TimeDiff; add resource support in Timer; fix Timer to stop
	  spinning once it is Stopped.

2001-11-09  Glenn Maynard <g_ld@zewt.org>

	* FileSet.cc FileSet.h FileSetOutput.cc FileSetOutput.h FindJob.cc